MAGNOLIA-2491 MAGNOLIA-1211 Added configuration to pom to execute xdoclet plugins: tld generation and content2bean doc (currently commented out) Added some @content2bean tags to check generated documentation
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@23984 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-taglib-cms/pom.xml
+++ b/magnolia-taglib-cms/pom.xml
@@ -8,6 +8,14 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-taglib-cms</artifactId>
   <name>magnolia-taglib-cms</name>
+  <!--
+  <name>CMS Tag Library</name>
+  <description>Core tag library for CMS</description>
+  <properties>
+    <taglib.shortname>cms</taglib.shortname>
+    <taglib.uri>cms-taglib</taglib.uri>
+  </properties>
+  -->
   <dependencies>
     <dependency>
       <groupId>info.magnolia</groupId>
@@ -63,6 +71,16 @@
        <scope>test</scope>
     </dependency>
   </dependencies>
+  <!--
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.xdoclet</groupId>
+        <artifactId>maven2-xdoclet2-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
+  -->
   <reporting>
     <plugins>
       <plugin>
