--- a/magnolia-core/pom.xml
+++ b/magnolia-core/pom.xml
@@ -194,6 +194,12 @@
           </execution>
         </executions>
       </plugin>
+      <!-- generate content2bean doc
+      <plugin>
+        <groupId>org.codehaus.xdoclet</groupId>
+        <artifactId>maven2-xdoclet2-plugin</artifactId>
+      </plugin>
+       -->
     </plugins>
   </build>
 </project>
