--- a/magnolia-taglib-utility/pom.xml
+++ b/magnolia-taglib-utility/pom.xml
@@ -9,6 +9,14 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-taglib-utility</artifactId>
   <name>magnolia-taglib-utility</name>
+  <!--
+  <name>CMS Utility Tag Library</name>
+  <description>CMS Utility Tag Library</description>
+  <properties>
+    <taglib.shortname>cmsu</taglib.shortname>
+    <taglib.uri>cms-util-taglib</taglib.uri>
+  </properties>
+  -->
   <dependencies>
     <dependency>
       <groupId>info.magnolia</groupId>
@@ -58,6 +66,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <!--
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.xdoclet</groupId>
+        <artifactId>maven2-xdoclet2-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
+  -->
   <reporting>
     <plugins>
       <plugin>
