Reintroducing exclusions that are still needed :)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@24422 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/pom.xml
+++ b/magnolia-core/pom.xml
@@ -97,6 +97,21 @@
     <dependency>
       <groupId>commons-betwixt</groupId>
       <artifactId>commons-betwixt</artifactId>
+      <!-- Following exclusions are not inherited from the parent pom and need to be defined here. If you think about removing them, be sure to build DMS afterwards. -->
+      <exclusions>
+        <exclusion>
+          <groupId>xml-apis</groupId>
+          <artifactId>xml-apis</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>commons-beanutils</groupId>
+          <artifactId>commons-beanutils-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>taglibs</groupId>
