modified plugins repo id for codehaus snapshots, just to be sure there's no conflict
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@24518 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -573,7 +573,7 @@ for Java Content Repositories (JCR).
   <!-- remove this once xdoclet 2.0.7 is out -->
   <pluginRepositories>
     <pluginRepository>
-      <id>codehaus-snapshots</id>
+      <id>codehaus-snapshots-plugins</id>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
