MAGNOLIA-2700 added show-compile-warnings profile
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@24527 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,25 @@ for Java Content Repositories (JCR).
     <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk</developerConnection>
     <url>http://svn.magnolia-cms.com/view/community/magnolia/trunk</url>
   </scm>
+  <profiles>
+    <profile>
+      <id>show-compile-warnings</id>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                <!--<compilerArgument>-Xlint:unchecked,deprecation,fallthrough,finally</compilerArgument>-->
+                <compilerArgument>-Xlint:all</compilerArgument>
+                <showWarnings>true</showWarnings>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+  </profiles>
   <build>
     <plugins>
       <plugin>
