MAGNOLIA-2727: update jdom and jaxen
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@24945 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -287,12 +287,12 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>jdom</groupId>
         <artifactId>jdom</artifactId>
-        <version>1.0</version>
+        <version>1.1</version>
       </dependency>
       <dependency>
         <groupId>jaxen</groupId>
         <artifactId>jaxen</artifactId>
-        <version>1.0-FCS</version>
+        <version>1.1.1</version>
         <exclusions>
           <exclusion>
             <artifactId>xom</artifactId>
@@ -301,6 +301,10 @@ for Java Content Repositories (JCR).
           <exclusion>
             <artifactId>dom4j</artifactId>
             <groupId>dom4j</groupId>
+          </exclusion>
+          <exclusion>
+            <artifactId>xml-apis</artifactId>
+            <groupId>xml-apis</groupId>
           </exclusion>
         </exclusions>
       </dependency>
