fixed release notes URL, added documentationURL for samples
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@25489 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-samples/pom.xml
+++ b/magnolia-module-samples/pom.xml
@@ -9,6 +9,10 @@
   <artifactId>magnolia-module-samples</artifactId>
   <name>magnolia-module-samples</name>
   <packaging>jar</packaging>
+  <description/>
+  <properties>
+    <documentationURL>http://documentation.magnolia-cms.com/modules/samples.html</documentationURL>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>info.magnolia</groupId>
