[maven-release-plugin] prepare release magnolia-4.1-rc1
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@25556 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-samples/pom.xml
+++ b/magnolia-module-samples/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>4.1-SNAPSHOT</version>
+    <version>4.1-rc1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>magnolia-module-samples</artifactId>
   <name>magnolia-module-samples</name>
   <packaging>jar</packaging>
-  <description/>
+  <description />
   <properties>
     <documentationURL>http://documentation.magnolia-cms.com/modules/samples.html</documentationURL>
   </properties>
@@ -17,19 +17,19 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
-      <version>4.1-SNAPSHOT</version>
+      <version>4.1-rc1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-taglib-cms</artifactId>
-      <version>4.1-SNAPSHOT</version>
+      <version>4.1-rc1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-taglib-utility</artifactId>
-      <version>4.1-SNAPSHOT</version>
+      <version>4.1-rc1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
