--- a/magnolia-module-admininterface/pom.xml
+++ b/magnolia-module-admininterface/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>4.1-SNAPSHOT</version>
+    <version>4.1-rc3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,27 +13,27 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.1-SNAPSHOT</version>
+      <version>4.1-rc3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-exchange-simple</artifactId>
-      <version>4.1-SNAPSHOT</version>
+      <version>4.1-rc3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>4.1-SNAPSHOT</version>
+      <version>4.1-rc3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-jaas</artifactId>
-      <version>4.1-SNAPSHOT</version>
+      <version>4.1-rc3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-templating</artifactId>
-      <version>4.1-SNAPSHOT</version>
+      <version>4.1-rc3</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -102,7 +102,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.1-SNAPSHOT</version>
+      <version>4.1-rc3</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
