MGNLEE-151 / MAGNOLIA-2774 replaced "Magnolia International" by "Magnolia International Ltd."
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@26033 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <version>4.1-SNAPSHOT</version>
   <description>
 Magnolia is an open-source enterprise class Content Management System
-developed by Magnolia International, based on the standard API
+developed by Magnolia International Ltd., based on the standard API
 for Java Content Repositories (JCR).
   </description>
   <url>http://www.magnolia-cms.com</url>
