MAGNOLIA-2792 configured the taglib report so that it finds the generated TLD files
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@26258 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-taglib-utility/pom.xml
+++ b/magnolia-taglib-utility/pom.xml
@@ -76,6 +76,9 @@
       <plugin>
         <groupId>net.sourceforge.maven-taglib</groupId>
         <artifactId>maven-taglib-plugin</artifactId>
+        <configuration>
+          <srcDir>${project.build.directory}/classes/META-INF/</srcDir>
+        </configuration>
       </plugin>
     </plugins>
   </reporting>
