--- a/pom.xml
+++ b/pom.xml
@@ -314,12 +314,11 @@ for Java Content Repositories (JCR).
             <artifactId>xml-apis</artifactId>
             <groupId>xml-apis</groupId>
           </exclusion>
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+          </exclusion>
         </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>saxpath</groupId>
-        <artifactId>saxpath</artifactId>
-        <version>1.0-FCS</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
