--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
     <listener-class>info.magnolia.cms.servlets.MgnlServletContextListener</listener-class>
   </listener>
   <!-- These are the default paths searched for magnolia configuration. Uncomment if you need to customize this. -->
-  <!-- Be aware that your container might do its own variables replacement here (Resin does, Tomcat doesn't, for instance -->
+  <!-- Be aware that your container might do its own variables replacement here. (Resin does, Tomcat doesn't, for instance) -->
   <!--
   <context-param>
     <param-name>magnolia.initialization.file</param-name>
