git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@28177 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-workflow</artifactId>
-          <version>4.1</version>
+          <version>${project.version}</version>
         </dependency>
         <dependency>
           <groupId>info.magnolia</groupId>
@@ -28,7 +28,7 @@
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-samples</artifactId>
-          <version>4.1</version>
+          <version>${project.version}</version>
         </dependency>
       </dependencies>
     </profile>
